fixed carousel dot not showing current slide

--- a/src/Components/MainPage/Slider/Slider.module.scss
+++ b/src/Components/MainPage/Slider/Slider.module.scss
@@ -53,6 +53,12 @@
     cursor: pointer;
     font-size: 15px;
   }
+  &__currentdot{
+    margin: 0 1px;
+    cursor: pointer;
+    font-size: 15px;
+    color: $white;
+  }
 }
 
 @media(max-width: 1100px) {
